enabled mariadb server by default
Signed-off-by: Eric Coulter <jecoulte@iu.edu>

--- a/roles/pre_ohpc/tasks/main.yml
+++ b/roles/pre_ohpc/tasks/main.yml
@@ -171,5 +171,5 @@
      service: name=chronyd state=restarted enabled=yes
 
    - name: start start
-     service: name=mariadb state=restarted
+     service: name=mariadb state=restarted enabled=yes
 
