--- a/roles/ohpc_jupyter/tasks/main.yml
+++ b/roles/ohpc_jupyter/tasks/main.yml
@@ -4,7 +4,7 @@
     source /etc/profile.d/lmod.sh 
     export EASYBUILD_PREFIX={{ easybuild_prefix }}
     module load EasyBuild
-    eb Anaconda3-5.3.0.eb --try-toolchain-name=dummy -r --force
+    eb Anaconda3-5.3.0.eb --toolchain-name=system -r --force
   become_user: build
   args:
     executable: /bin/bash
