Added wait for slurmdbd to start
Signed-off-by: Eric Coulter <jecoulte@iu.edu>

--- a/roles/ohpc_install/tasks/main.yml
+++ b/roles/ohpc_install/tasks/main.yml
@@ -80,6 +80,11 @@
        state: started
        enabled: yes
 
+
+   - name: wait for 30s to let slurmdbd fully start
+     wait_for:
+       timeout: 30
+
    - name: load sacctmgr config
      command: sacctmgr -i load /etc/slurm/sacctmgr-heirarchy.cfg
 
