Added ipmitool to compute node config
Signed-off-by: Eric Coulter <jecoulte@iu.edu>

--- a/roles/compute_config_xcat/tasks/main.yml
+++ b/roles/compute_config_xcat/tasks/main.yml
@@ -30,7 +30,8 @@
                "ohpc-slurm-client",
                "chrony",
                "kernel",
-               "lmod-ohpc"
+               "lmod-ohpc",
+               "ipmitool"
               ]
         state: latest
 
