--- a/roles/gpu_config_xcat/tasks/main.yml
+++ b/roles/gpu_config_xcat/tasks/main.yml
@@ -11,19 +11,12 @@
             ]
       state: latest
 
-#  - name: create build dir
-#    file: path="/root/nvidia_build/" state=directory
-
   - name: get CUDA toolkit
     get_url:
       url: "{{ nvidia_cuda_toolkit_runfile_url }}"
       dest: /root/
       mode: '0755'
-#    args:
-#      creates: "/root/{{ nvidia_cuda_toolkit_runfile_url }}"
 
-#  - name: break
-#    fail:
   - name: blacklist nouveau in modprobe
     copy: src=blacklist_modprobe dest=/etc/modprobe.d/blacklist.conf
 
@@ -36,39 +29,12 @@
   - name: re-gather facts
     setup:
 
+  - name: get kernel version
+    shell: rpm -q --qf '%{version}-%{release}.%{arch}\n' kernel | tail -1
+    register: kernel_ver
+
   - name: Run CUDA toolkit installation
     shell: "/root/{{ cuda_toolkit_installer }} {{ cuda_toolkit_args }}"
 
-#   - name: build nvidia kernel modules in the vnfs
-#     shell: "/root/nvidia_build/{{ nvidia_driver_installer }} {{ nvidia_driver_args }}"
-##     shell: {{ nvidia_kernel_build_cmd }}
-##     vars:
-##       nvidia_kernel_build_cmd: "/root/nvidia_build/{{ nvidia_driver_installer }} {{ nvidia_driver_args }}"
-#
-#   - name: build cuda toolkit
-#     shell: "/root/nvidia_build/{{ cuda_toolkit_installer }} {{ cuda_toolkit_args }}"
-##     shell: chroot {{ gpu_chroot_loc }} {{ cuda_toolkit_build_cmd }}
-##     vars:
-##       cuda_toolkit_build_cmd: "/root/nvidia_build/{{ cuda_toolkit_installer }} {{ cuda_toolkit_args }}"
-#
-#  - name: build cuda samples
-#    shell: "/root/nvidia_build/{{ cuda_samples_installer }} {{ cuda_samples_args }}"
-##     shell: chroot {{ gpu_chroot_loc }} {{ cuda_samples_build_cmd }}
-##     vars:
-##       cuda_samples_build_cmd: "/root/nvidia_build/{{ cuda_samples_installer }} {{ cuda_samples_args }}"
-##
-#  - name: blacklist nouveau in grub
-#    copy: src=grub_default dest=/etc/default/grub
-#
-#  - name: create rebuild-grub service
-#    copy: src=rebuild-grub.service dest=/etc/systemd/system/rebuild-grub.service
-#
-#  - name: enable rebuild-grub.service
-#    command: systemctl enable rebuild-grub.service
-
-  - name: create service create-cuda-devices
-    copy: src=create-cuda-devices.service dest=/etc/systemd/system/create-cuda-devices.service
-
-  - name: enable create-cuda-devices
-    command:  systemctl enable create-cuda-devices
-
+  - name: initialize GPU device
+    command: nvidia-smi
