--- a/roles/compute_ganglia_xcat/tasks/main.yml
+++ b/roles/compute_ganglia_xcat/tasks/main.yml
@@ -5,10 +5,10 @@
       name: ganglia-gmond-ohpc
       state: latest
 
-  - name: add gmond.conf to vnfs
+  - name: create gmond.conf
     template: src=gmond.conf.j2 dest=/etc/ganglia/gmond.conf
 
-  - name: create /var/lib/ganglia in vnfs
+  - name: create /var/lib/ganglia 
     file: 
       path: "/var/lib/ganglia" 
       state: directory 
