Use the ood-cod.yaml playbook for running required roles on login-img chroot
Remove running each role explicitly through a loop in favor of a playbook
having all the required roles.

--- a/roles/cod_login_node/tasks/main.yml
+++ b/roles/cod_login_node/tasks/main.yml
@@ -49,17 +49,7 @@
 #  when: enable_copr == true and inventory_hostname in item.host
 
 - name: Run the Ansible roles related to login image
-  command: ansible-playbook -c chroot -i '/cm/images/login-image/CRI_XCBC/hosts' /CRI_XCBC/ood-build.yaml -b -t {{ item }}
-  loop:
-    - ood
-    - ood_jupyter
-    - ood_vnc_form
-    - ood_add_rstudio
-    - ood_matlab
-    - ood_sas
-    - ood_firewall_and_services
-    - ood_shib_sso
-    - ood_user_reg_cloud
+  command: ansible-playbook -c chroot -i '/cm/images/login-image/CRI_XCBC/hosts' /CRI_XCBC/ood-cod.yaml -b
 
 - name: Run the Ansible role related to self-reg
   command: ansible-playbook -c chroot -i '/cm/images/login-image/CRI_XCBC/hosts' /CRI_XCBC/ood-ops.yaml -b -t ood_user_reg_ops
