Added role and var for ood_install to main playbook
Signed-off-by: Eric Coulter <jecoulte@iu.edu>

--- a/headnode.yml
+++ b/headnode.yml
@@ -35,3 +35,4 @@
        node_inventory_auto: false,
        tags: viz_build_nodes }
    - {role: nodes_vivify, tags: nodes_vivify}
+   - {role: ood_install, tags: ood_install}
