Feat add rmq agent user (#202)
* Add some variabls related to RabbitMQ

* Use template for config file

* Remove unused tasks

* Add vhost in RabbitMQ

* Add user in RabbitMQ

* Install pip requirements in venv

* Change file to template for ohpc services

Since we introduced variable rabbitmq_agents_loc,
 change to template can utilize the variable

* Change copy to template in ood role

* Update location with variable rabbitmq_agents_loc

* Install requirements in venv in ood role

* Remove extra arguments in task

* Make agents repo URL as variable

* Add suffix to agent services

* Make agents repo version as variable

* Adjust task name

* Merge two starting service task

replace with loop

* Merge two agents into one template

* Modify script name in agent template

* Add RMQ venv path to exisiting PATH(not replace)

* Change old naming convention for agents in service file template.

* Add RMQ agents to the tasks to install.

* Add the RMQ related vars for new agents.

* Access PATH env var by using ansible's lookup plugin

* Add user variable for rabbitMQ agent services

* Parameterize the user in RMQ agent service template file

Co-authored-by: Bo-Chun Louis Chen(VM) <louistw@uab.edu>

--- a/roles/ood_add_rabbitmq_agents/tasks/main.yaml
+++ b/roles/ood_add_rabbitmq_agents/tasks/main.yaml
@@ -1,40 +1,29 @@
 ---
 - name: Clone the git repo to the machine
   git: 
-    repo: https://github.com/uabrc/rabbitmq_agents.git
-    dest: /opt/rabbitmq_agents
-    version: develop
+    repo: "{{ rabbitmq_agents_repo }}"
+    dest: "{{ rabbitmq_agents_loc }}"
+    version: "{{ rabbitmq_agents_version }}"
 
-- name: Make a copy of rabbit config example file
-  copy:
-    src: /opt/rabbitmq_agents/rabbit_config.py.example
-    dest: /opt/rabbitmq_agents/rabbit_config.py
-    remote_src: yes
-
-- name: Add rabbitmq password in the rabbit_config file
-  replace:
-    path: /opt/rabbitmq_agents/rabbit_config.py
-    regexp: 'CHANGE_IT_TO_YOUR_OWN_PASSWORD'
-    replace: "{{ rabbitmq_user_password }}"
-    backup: yes
+- name: Install rabbitmq agents config file
+  template:
+    src: config.j2
+    dest: "{{ rabbitmq_agents_loc }}/rabbit_config.py"
 
 - name: Check if environment is properly setup, and install python packages if not
   pip:
-    requirements: /opt/rabbitmq_agents/requirements.txt
-    executable: pip3
+    requirements: requirements.txt
+    virtualenv: venv
+    virtualenv_command: /usr/bin/python3 -m venv
+    chdir: "{{ rabbitmq_agents_loc }}"
 
-#- name: Run the ood_account_create agent in the background
-#  shell: cd /opt/rabbitmq_agents; nohup python ood_account_create.py </dev/null >/dev/null 2>&1 &
+- name: Install agents as service
+  template:
+    src: ood_account_agent.j2
+    dest: "/etc/systemd/system/ood_account_agent.service"
 
-- name: Copy service files to the machine.
-  copy:
-    src: "{{ item }}"
-    dest: "/etc/systemd/system/{{ item }}"
-  with_items:
-    - ood_account.service
-
-- name: Start ood_account.service
+- name: Start and enable agent service
   service:
-    name: ood_account.service
+    name: ood_account_agent.service
     state: started
     enabled: yes
