--- a/roles/ohpc_add_rabbitmq_agents/tasks/main.yaml
+++ b/roles/ohpc_add_rabbitmq_agents/tasks/main.yaml
@@ -1,50 +1,66 @@
 ---
 - name: Clone the git repo to the machine
   git: 
-    repo: https://github.com/uabrc/rabbitmq_agents.git
-    dest: /opt/rabbitmq_agents
-    version: develop
+    repo: "{{ rabbitmq_agents_repo }}"
+    dest: "{{ rabbitmq_agents_loc }}"
+    version: "{{ rabbitmq_agents_version }}"
 
-- name: Make a copy of rabbit config example file
-  copy:
-    src: /opt/rabbitmq_agents/rabbit_config.py.example
-    dest: /opt/rabbitmq_agents/rabbit_config.py
-    remote_src: yes
+- name: Install rabbitmq agents config file
+  template:
+    src: config.j2
+    dest: "{{ rabbitmq_agents_loc }}/rabbit_config.py"
 
-- name: Add rabbitmq password in the rabbit_config file
-  replace:
-    path: /opt/rabbitmq_agents/rabbit_config.py
-    regexp: 'CHANGE_IT_TO_YOUR_OWN_PASSWORD'
-    replace: '{{ rabbitmq_user_password }}'
-    backup: yes
-
-- name: Check if environment is properly setup, and install python packages if not
+- name: Setup the venv for rabbitmq agents
   pip:
-    requirements: /opt/rabbitmq_agents/requirements.txt
-    executable: pip3
+    requirements: requirements.txt
+    virtualenv: venv
+    virtualenv_command: /usr/bin/python3 -m venv
+    chdir: "{{ rabbitmq_agents_loc }}"
 
-- name: Run the ohpc_account_create agent in the background
-  shell: cd /opt/rabbitmq_agents; nohup python ohpc_account_create.py </dev/null >/dev/null 2>&1 & 
+- name: Install agents as service
+  template:
+    src: agent.j2
+    dest: "/etc/systemd/system/{{ item.name }}_agent.service"
+  loop:
+    - { name: "ohpc_account", desc: "Service to create an account on OHPC" }
+    - { name: "slurm_account", desc: "Service to create a SLURM user and account" }
+    - { name: "get-next-uid-gid", desc: "Service to create a bright user account" }
+    - { name: "dir_verify", desc: "Service to verify directories are created" }
+    - { name: "git_commit", desc: "Service to commit new user ldap files to git" }
+    - { name: "subscribe_mail_lists", desc: "Service to subscribe the users to mailing list" }
+    - { name: "notify_user", desc: "Service to notify user about successful account creation" }
+    - { name: "task_manager", desc: "Service to manage message flow between above rabbitmq agents" }
+    - { name: "user_reg_logger", desc: "Service to store the request object passed during account request" }
+    - { name: "user_reg_event_logger", desc: "Service to log all messages passed during the account creation" }
 
-#- name: Run the slurm_account_create agent in the background
-#  shell: cd /opt/rabbitmq_agents; nohup python slurm_agent.py </dev/null >/dev/null 2>&1 &
+- name: Add Vhost in RabbitMQ
+  rabbitmq_vhost:
+    name: "{{ rabbitmq_vhost }}"
+    state: present
 
-- name: Copy service files to the machine.
-  copy:
-    src: "{{ item }}"
-    dest: "/etc/systemd/system/{{ item }}"
-  with_items:
-    - ohpc_account.service
-    - slurm_account.service
+- name: Add User in RabbitMQ
+  rabbitmq_user:
+    user: "{{ rabbitmq_user }}"
+    password: "{{ rabbitmq_user_password }}"
+    vhost: "{{ rabbitmq_vhost }}"
+    configure_priv: .*
+    read_priv: .*
+    write_priv: .*
+    state: present
 
-- name: Start ohpc_account.service
+- name: Start and enable agent services
   service:
-    name: ohpc_account.service
+    name: "{{ item }}.service"
     state: started
     enabled: yes
-
-- name: Start slurm_account.service
-  service:
-    name: slurm_account.service
-    state: started
-    enabled: yes
+  loop:
+    - ohpc_account_agent
+    - slurm_account_agent
+    - get-next-uid-gid_agent
+    - dir_verify_agent
+    - git_commit_agent
+    - subscribe_mail_lists_agent
+    - notify_user_agent
+    - task_manager_agent
+    - user_reg_logger_agent
+    - user_reg_event_logger_agent
