Add config for rmq agents as templates (#206)
* Add some variabls related to RabbitMQ

* Use template for config file

* Remove unused tasks

* Add vhost in RabbitMQ

* Add user in RabbitMQ

* Install pip requirements in venv

* Change file to template for ohpc services

Since we introduced variable rabbitmq_agents_loc,
 change to template can utilize the variable

* Change copy to template in ood role

* Update location with variable rabbitmq_agents_loc

* Install requirements in venv in ood role

* Remove extra arguments in task

* Make agents repo URL as variable

* Add suffix to agent services

* Make agents repo version as variable

* Adjust task name

* Merge two starting service task

replace with loop

* Merge two agents into one template

* Modify script name in agent template

* Add RMQ venv path to exisiting PATH(not replace)

* Change old naming convention for agents in service file template.

* Add RMQ agents to the tasks to install.

* Add the RMQ related vars for new agents.

* Access PATH env var by using ansible's lookup plugin

* Add user variable for rabbitMQ agent services

* Parameterize the user in RMQ agent service template file

* Add config required by RMQ agents as a template

We add this as an ansible template so that the config file
will be generated during the deploy time with vals from
group_vars/all which can be used by agents.

* Add vars in group_vars/all to supply values for config.j2 template

* Mark a block raw to have jinja syntax in a template.

* Parameterize time delay in acct. creation

* Add user dir list to the config template

* Remove quotes to be evaluated as int for delay param

* Move the email template from config.j2 to mail_config.j2

* Add ansible task to isntall mail_config to destination

Co-authored-by: Bo-Chun Louis Chen(VM) <louistw@uab.edu>
Co-authored-by: rtripath89 <ravi89@uab.edu>

--- a/roles/ohpc_add_rabbitmq_agents/tasks/main.yaml
+++ b/roles/ohpc_add_rabbitmq_agents/tasks/main.yaml
@@ -10,6 +10,13 @@
     src: config.j2
     dest: "{{ rabbitmq_agents_loc }}/rabbit_config.py"
 
+
+- name: Install mail template as mail_config file
+  template:
+    src: mail_config.j2
+    dest: "{{ rabbitmq_agents_loc }}/mail_config.py"
+
+
 - name: Setup the venv for rabbitmq agents
   pip:
     requirements: requirements.txt
