Feat deploy new rmq dir structure (#205)
* Add some variabls related to RabbitMQ

* Use template for config file

* Remove unused tasks

* Add vhost in RabbitMQ

* Add user in RabbitMQ

* Install pip requirements in venv

* Change file to template for ohpc services

Since we introduced variable rabbitmq_agents_loc,
 change to template can utilize the variable

* Change copy to template in ood role

* Update location with variable rabbitmq_agents_loc

* Install requirements in venv in ood role

* Remove extra arguments in task

* Make agents repo URL as variable

* Add suffix to agent services

* Make agents repo version as variable

* Adjust task name

* Merge two starting service task

replace with loop

* Merge two agents into one template

* Modify script name in agent template

* Add RMQ venv path to exisiting PATH(not replace)

* Change old naming convention for agents in service file template.

* Add RMQ agents to the tasks to install.

* Add the RMQ related vars for new agents.

* Access PATH env var by using ansible's lookup plugin

* Add user variable for rabbitMQ agent services

* Parameterize the user in RMQ agent service template file

* Change which RMQ agents are installed based on prod or dev deploy

For a prod deploy only agents inside prod_rmq_agents are deployed.
For a dev deploy only agents inside dev_rmq_agents are deployed.
The agent template agent.j2 requires the PYTHONPATH to be set for
agents to refer to rc_rmq and rc_util modules.
The working dir in the agent is set in accordance with dev/prod deploy.

* Use cod_deploy flag to decide which of dev/prod agents to deploy.

Co-authored-by: Bo-Chun Louis Chen(VM) <louistw@uab.edu>
Co-authored-by: rtripath89 <ravi89@uab.edu>

--- a/roles/ohpc_add_rabbitmq_agents/tasks/main.yaml
+++ b/roles/ohpc_add_rabbitmq_agents/tasks/main.yaml
@@ -10,6 +10,64 @@
     src: config.j2
     dest: "{{ rabbitmq_agents_loc }}/rabbit_config.py"
 
+- name: Setup the venv for rabbitmq agents
+  pip:
+    requirements: requirements.txt
+    virtualenv: venv
+    virtualenv_command: /usr/bin/python3 -m venv
+    chdir: "{{ rabbitmq_agents_loc }}"
+
+- name: Install dev agents service files
+  template:
+    src: agent.j2
+    dest: "/etc/systemd/system/{{ item | basename | splitext | first }}_agent.service"
+  loop: "{{ lookup('fileglob', '{{ rabbitmq_agents_loc }}/dev_rmq_agents/*.py', wantlist=True) }}"
+  when: not cod_deploy
+
+- name: Install prod agents service files
+  template:
+    src: agent.j2
+    dest: "/etc/systemd/system/{{ item | basename | splitext | first}}_agent.service"
+  loop: "{{ lookup('fileglob', '{{ rabbitmq_agents_loc }}/prod_rmq_agents/*.py', wantlist=True) }}"
+  when: cod_deploy | bool
+
+- name: Add Vhost in RabbitMQ
+  rabbitmq_vhost:
+    name: "{{ rabbitmq_vhost }}"
+    state: present
+
+- name: Add User in RabbitMQ
+  rabbitmq_user:
+    user: "{{ rabbitmq_user }}"
+    password: "{{ rabbitmq_user_password }}"
+    vhost: "{{ rabbitmq_vhost }}"
+    configure_priv: .*
+    read_priv: .*
+    write_priv: .*
+    state: present
+
+- name: Start and enable dev agent services
+  service:
+    name: "{{ item | basename | splitext | first }}_agent.service"
+    state: started
+    enabled: yes
+  loop: "{{ lookup('fileglob', '{{ rabbitmq_agents_loc }}/dev_rmq_agents/*.py', wantlist=True) }}"
+  when: not cod_deploy
+
+- name: Start and enable prod agent services
+  service:
+    name: "{{ item | basename | splitext | first }}_agent.service"
+    state: started
+    enabled: yes
+  loop: "{{ lookup('fileglob', '{{ rabbitmq_agents_loc }}/prod_rmq_agents/*.py', wantlist=True) }}"
+  when: cod_deploy | bool
+=======
+
+- name: Install rabbitmq agents config file
+  template:
+    src: config.j2
+    dest: "{{ rabbitmq_agents_loc }}/rabbit_config.py"
+
 
 - name: Install mail template as mail_config file
   template:
