Update error message
Show only stderr_lines
Add task name

--- a/roles/cod_rabbitmq_agents_cloud/tasks/main.yaml
+++ b/roles/cod_rabbitmq_agents_cloud/tasks/main.yaml
@@ -6,8 +6,9 @@
   ignore_errors: yes
   register: result
 
-- debug:
-    msg: "{{ result }}"
+- name: Error message
+  debug:
+    msg: "{{ result.stderr_lines }}"
   when: result.failed == 'true' or result.rc is defined
 
 - name: "Action needed:"
