Install necessary packages for rabbitmq

--- a/roles/ohpc_rabbitmq/tasks/main.yaml
+++ b/roles/ohpc_rabbitmq/tasks/main.yaml
@@ -40,6 +40,13 @@
     sslcacert: /etc/pki/tls/certs/ca-bundle.crt
     metadata_expire: 300
 
+- name: Install necessary packages
+  yum:
+    state: latest
+    name:
+      - socat
+      - logrotate
+
 - name: Install Erlang
   yum:
     name: https://bintray.com/rabbitmq-erlang/rpm/download_file?file_path=erlang%2F22%2Fel%2F7%2Fx86_64%2Ferlang-22.3.4.2-1.el7.x86_64.rpm
