--- a/roles/ohpc_rabbitmq/tasks/main.yaml
+++ b/roles/ohpc_rabbitmq/tasks/main.yaml
@@ -49,13 +49,15 @@
 
 - name: Install Erlang
   yum:
-    name: https://bintray.com/rabbitmq-erlang/rpm/download_file?file_path=erlang%2F22%2Fel%2F7%2Fx86_64%2Ferlang-22.3.4.2-1.el7.x86_64.rpm
-    state: present
+    name: erlang
+    enablerepo: rabbitmq_erlang
+    state: latest
 
 - name: Install RabbitMQ Server
   yum:
     name: rabbitmq-server
-    state: present
+    enablerepo: rabbitmq_server
+    state: latest
 
 - name: Start and enable RabbitMQ Server
   service:
