Fix service start during login image build (#201)
* Only enable srvcs as ohpc_firewall role is run in login img build stage.

* Use systemd module as recommended by ansible rather than generic services module.

--- a/roles/ohpc_firewall_and_services/tasks/main.yaml
+++ b/roles/ohpc_firewall_and_services/tasks/main.yaml
@@ -1,6 +1,5 @@
 ---
-- name: start and enable munge
-  service:
+- name: enable munge
+  systemd:
     name: munge
-    state: started
     enabled: yes
