Patch fix ood firewall and services role (#200)
* Just enable the sysd httpd24-httpd serv. don't start in build step

* use selinux ansible module as it's idempotent and doesn't error when disabled already

--- a/roles/ood_firewall_and_services/tasks/main.yaml
+++ b/roles/ood_firewall_and_services/tasks/main.yaml
@@ -1,7 +1,6 @@
 ---
 - name: Enable http service
   systemd:
-    state: started
     name: httpd24-httpd
     enabled: yes
 
@@ -32,4 +31,5 @@
     state: permissive
 
 - name: Set SELinux to permissive mode without reboot
-  command: setenforce 0
+  selinux:
+    state: disabled
